--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -14,7 +14,7 @@ body:
     attributes:
       label: What did you expect?
       description: What did you expect to happen?
-      placeholder: Tell us what you were expecting!
+      placeholder: I expected...
     validations:
       required: true
   - type: textarea
@@ -22,14 +22,14 @@ body:
     attributes:
       label: What actually happened?
       description: Tell us happened! Please share a full description along with screenshots or a screen reccording video that shows us the steps you took to encounter the bug. Including your narration in the video is helpful.
-      placeholder: Tell us what you actually see!
+      placeholder: I actually got...
     validations:
       required: true
   - type: dropdown
     id: impact
     attributes:
       label: Impact
-      description: How important is this?
+      description: How important is this? Are many people affected?
       options:
         - High
         - Low
