--- a/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
@@ -8,20 +8,27 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this feature request! This is for requesting new functionality, not for fixing stuff that has broken.
+        Thanks for taking the time to fill out this feature request! This is for requesting new functionality, not for fixing existing stuff that has broken.
   - type: textarea
     id: feature-description
     attributes:
       label: What's your idea?
       description: What is the problem that you are experiencing? What is your proposed solution? Feel free to include any screenshots or videos that help to explain.
-      placeholder: As a [who/role?], I want to [what/action?] so that [why/benifit?].
+    validations:
+      required: true
+  - type: textarea
+    id: feature-description
+    attributes:
+      label: User Story
+      description: As a [who/role?], I want to [what/action?] so that [why/benifit?].
+      placeholder: As a cat, I want to sit on a comfy bed so that sleep all day.
     validations:
       required: true
   - type: dropdown
     id: impact
     attributes:
       label: Impact
-      description: How important is this?
+      description: How important is this? For example, how many people would it help? Is it a legal requirement?
       options:
         - High
         - Low
