--- a/.github/workflows/take.yml
+++ b/.github/workflows/take.yml
@@ -2,10 +2,11 @@
 name: Assign issue to contributor
 on:
   issue_comment:
-
+    types: [ created ]
 jobs:
   assign:
     name: Take an issue
+    if: ${{ !github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps:
       - name: take the issue
